--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,11 @@
                 <version>1.5.0</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.hsqldb</groupId>
+                <artifactId>hsqldb</artifactId>
+                <version>2.4.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
