--- a/family-clock-war/pom.xml
+++ b/family-clock-war/pom.xml
@@ -33,6 +33,10 @@
             <artifactId>spring-test</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
             <groupId>net.remgant</groupId>
             <artifactId>family-clock-core</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -60,6 +64,11 @@
         <dependency>
             <groupId>org.skyscreamer</groupId>
             <artifactId>jsonassert</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
             <scope>test</scope>
         </dependency>
 
